jalv (1.0.0) stable;

  * Initial release

 -- David Robillard <d@drobilla.net>  Thu, 19 Apr 2012 18:42:42 -0400
